--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -1,172 +1,281 @@
-@online{_drools_definition,
-	title = {Drools - Drools - Business Rules Management System (Java™, Open Source)},
-	url = {https://www.drools.org/},
-	urldate = {2018-04-20},
-	file = {Drools - Drools - Business Rules Management System (Java™, Open Source):C\:\\Users\\robin\\Zotero\\storage\\UIV7FATT\\www.drools.org.html:text/html}
-}
-@online{_optaplanner_definition,
-	title = {{OptaPlanner} - Constraint satisfaction solver (Java™, Open Source)},
-	url = {https://www.optaplanner.org/},
-	urldate = {2018-04-20}
-}
-@online{_untis_definition,
-	title = {Stundenplan Software/Programm Untis, Stundenplan erstellen!!},
-	rights = {Dies ist eine öffentlich zugängliche Seite},
-	url = {https://www.untis.at/HTML/start.php},
-	abstract = {Stundenplan Software/Programm Untis, Stundenplan erstellen!!},
-	titleaddon = {{HTML}-Referenz},
-	type = {Text},
-	author = {webmaster@grupet.at},
-	urldate = {2018-04-20},
-	date = {2015-10-08},
-	langid = {german},
-	file = {Snapshot:C\:\\Users\\robin\\Zotero\\storage\\99EQC6CG\\start.html:text/html}
+@article{spittler_teilnehmende_2001,
+	title = {Teilnehmende {Beobachtung} als {Dichte} {Teilnahme}},
+	url = {http://www.ethnologie.uni-bayreuth.de/de/team/Emeriti/Spittler_Gerd/Alle_Publikationen/2001_Teilnehmende_Beobachtung.pdf},
+	urldate = {2018-11-30},
+	author = {Spittler, Gerd},
+	year = {2001},
+	file = {2001_Teilnehmende_Beobachtung.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\9QM9BK7F\\2001_Teilnehmende_Beobachtung.pdf:application/pdf}
 }
 
-@article{obermann_optimierung_stundenpläne,
-	title = {Optimierung von Stundenplänen},
-	pages = {56},
-	author = {Obermann, Lennart},
-	langid = {german},
-	file = {Obermann - Optimierung von Stundenplänen.pdf:C\:\\Users\\Robin\\Zotero\\storage\\68KCJLP4\\Obermann - Optimierung von Stundenplänen.pdf:application/pdf}
+@book{malinowski_argonauts_1922,
+	title = {Argonauts of the western {Pacific}; an account of native enterprise and adventure in the {Archipelagoes} of {Melanesian} {New} {Guinea}. {With} a pref. by {Sir} {James} {George} {Frazer}},
+	url = {http://archive.org/details/argonautsofweste00mali},
+	language = {eng},
+	urldate = {2018-12-27},
+	publisher = {Dutton},
+	author = {Malinowski, Bronislaw},
+	collaborator = {{New York Public Library}},
+	year = {1922},
+	keywords = {Ethnology -- New Guinea}
 }
 
-@article{keck_optimierung_stundenplaene,
-	title = {Optimierung von Schulstundenplänen},
-	abstract = {For many years, the automated construction of school timetables has been subject of research in Artiﬁcial Intelligence and Operations Research. This thesis combines techniques from both areas: Formulations as a constraint satisfaction problem and as a pseudo-boolean optimization problem are each combined with the relaxation of the corresponding linear program, in order to obtain better results more quickly. For each variant and combination of these formulations, tests were carried out using four different instances. The results show that – at least for smaller schools like German primary schools – the proposed methods are as fast as established methods. In contrast to these, the proposed methods always yield entirely feasible and provably optimal solutions. Moreover, they are easier to extend and adjust. When combined with commercial solvers, the proposed problem formulations achieve better results for larger instances like those of German high schools, as well. The formulations and results in this thesis are speciﬁc to the German education system.},
-	pages = {95},
-	author = {Keck, Philipp},
-	langid = {german},
-	file = {Keck - Optimierung von Schulstundenplänen.pdf:C\:\\Users\\Robin\\Zotero\\storage\\WX8RXHP6\\Keck - Optimierung von Schulstundenplänen.pdf:application/pdf}
-}
-
-
-@article{prosser_hybrid_1993,
-	title = {{HYBRID} {ALGORITHMS} {FOR} {THE} {CONSTRAINT} {SATISFACTION} {PROBLEM}},
-	volume = {9},
-	issn = {0824-7935, 1467-8640},
-	url = {http://doi.wiley.com/10.1111/j.1467-8640.1993.tb00310.x},
-	doi = {10.1111/j.1467-8640.1993.tb00310.x},
-	abstract = {It might be said that there are five basic tree search algorithms for the constraint satisfaction problem (csp), namely, naive backtracking ({BT}), backjumping ({BJ}), conflict-directed backjumping ({CBJ}), backmarking ({BM}), and forward checking ({FC}). In broad terms, {BT}, {BJ}, and {CBJ} describe different styles of backward move (backtracking), whereas {BT}, {BM}, and {FC} describe different styles of forward move (labeling of variables). This paper presents an approach that allows base algorithms to be combined, giving us new hybrids. The base algorithms are described explicitly, in terms of a forward move and a backward move. It is then shown that the forward move of one algorithm may be combined with the backward move of another, giving a new hybrid. In total, four hybrids are presented: backmarking with backjumping ({BMJ}), backmarking with conflict-directed backjumping ({BM}-{CBJ}), forward checking with backjumping ({FC}-{BJ}), and forward checking with conflict-directed backjumping ({FC}-{CBJ}). The performances of the nine algorithms ({BT}, {BJ}, {CBJ}, {BM}, {BMJ}, {BM}-{CBJ}, {FC}, {FC}-{BJ}, {FC}-{CBJ}) are compared empirically, using 450 instances of the {ZEBRA} problem, and it is shown that {FC}-{CBJ} is by far the best of the algorithms examined.},
-	pages = {268--299},
-	number = {3},
-	journaltitle = {Computational Intelligence},
-	author = {Prosser, Patrick},
-	urldate = {2018-05-08},
-	date = {1993-08},
-	langid = {english},
-	file = {Prosser - 1993 - HYBRID ALGORITHMS FOR THE CONSTRAINT SATISFACTION .pdf:C\:\\Users\\robin\\Zotero\\storage\\4R2JPQMU\\Prosser - 1993 - HYBRID ALGORITHMS FOR THE CONSTRAINT SATISFACTION .pdf:application/pdf}
-}
-@article{kumar_algorithms_1992,
-	title = {Algorithms for Constraint-Satisfaction Problems: A Survey},
-	volume = {13},
-	rights = {Copyright (c)},
-	issn = {0738-4602},
-	url = {https://www.aaai.org/ojs/index.php/aimagazine/article/view/976},
-	doi = {10.1609/aimag.v13i1.976},
-	shorttitle = {Algorithms for Constraint-Satisfaction Problems},
-	abstract = {A large number of problems in {AI} and other areas of computer science can be viewed as special cases of the constraint-satisfaction problem. Some examples are machine vision, belief maintenance, scheduling, temporal reasoning, graph problems, floor plan design, the planning of genetic experiments, and the satisfiability problem. A number of different approaches have been developed for solving these problems. Some of them use constraint propagation to simplify the original problem. Others use backtracking to directly search for possible solutions. Some are a combination of these two techniques. This article overviews many of these approaches in a tutorial fashion.},
+@article{hevner_design_nodate,
+	title = {Design {Science} in {Information} {Systems} {Research}},
+	language = {en},
+	author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
+	keywords = {DS},
 	pages = {32},
+	file = {Hevner et al. - Design Science in Information Systems Research.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\5NP8HYQC\\Hevner et al. - Design Science in Information Systems Research.pdf:application/pdf}
+}
+
+@article{peffers_design_2007,
+	title = {A {Design} {Science} {Research} {Methodology} for {Information} {Systems} {Research}},
+	volume = {24},
+	issn = {0742-1222, 1557-928X},
+	url = {https://www.tandfonline.com/doi/full/10.2753/MIS0742-1222240302},
+	doi = {10.2753/MIS0742-1222240302},
+	abstract = {The paper motivates, presents, demonstrates in use, and evaluates a methodology for conducting design science (DS) research in information systems. DS is of importance in a discipline oriented to the creation of successful artifacts. Several IS researchers have pioneered DS research in IS, yet over the last 15 years little DS research has been done within the discipline. The lack of a methodology to serve as a commonly accepted framework for DS research and of a template for its presentation may have contributed to its slow adoption. The design science research methodology (DSRM) presented here incorporates principles, practices, and procedures required to carry out such research and meets three objectives: it is consistent with prior literature, it provides a nominal process model for doing DS research, and it provides a mental model for presenting and evaluating DS research in IS. The DS process includes six steps: problem identification and motivation, definition of the objectives for a solution, design and development, demonstration, evaluation, and communication. We demonstrate and evaluate the methodology by presenting four case studies in terms of the DSRM, including cases that present the design of a database to support health assessment methods, a software reuse measure, an Internet video telephony application, and an IS planning method. The designed methodology effectively satisfies the three objectives and has the potential to help aid the acceptance of DS research in the IS discipline.},
+	language = {en},
+	number = {3},
+	urldate = {2018-12-21},
+	journal = {Journal of Management Information Systems},
+	author = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A. and Chatterjee, Samir},
+	month = dec,
+	year = {2007},
+	pages = {45--77},
+	file = {Peffers et al. - 2007 - A Design Science Research Methodology for Informat.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\RYENY3GZ\\Peffers et al. - 2007 - A Design Science Research Methodology for Informat.pdf:application/pdf}
+}
+
+@inproceedings{j._ellis_guide_2010,
+	title = {A {Guide} for {Novice} {Researchers}: {Design} and {Development} {Research} {Methods}},
+	shorttitle = {A {Guide} for {Novice} {Researchers}},
+	url = {https://www.informingscience.org/Publications/1237},
+	doi = {10.28945/1237},
+	abstract = {Understanding the type of research methods that may best fit a given research agenda can be daunting task for novice researchers. In many instances, the problem can seem to be overwhelming in that the novice does not possess the basic familiarity with the fundamental terms and concepts of some of the more commonly used approaches to make an informed decision. This paper provides the novice researcher with a basic set of concepts and terms associated with conducting design and development studies, one of the foundational research approaches in the informing sciences. A six phase design and development framework adopted from prior system development methodology literature is presented. Additionally, examples to help the novice researcher better grasp the proposed framework are discussed.},
+	language = {en},
+	urldate = {2018-12-21},
+	author = {J. Ellis, Timothy and Levy, Yair},
+	year = {2010},
+	pages = {107--118},
+	file = {J. Ellis and Levy - 2010 - A Guide for Novice Researchers Design and Develop.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\BPP8GFQY\\J. Ellis and Levy - 2010 - A Guide for Novice Researchers Design and Develop.pdf:application/pdf}
+}
+
+@book{archer_systematic_1965,
+	address = {London},
+	title = {Systematic method for designers.},
+	language = {English},
+	publisher = {Council of Industrial Design},
+	author = {Archer, L. Bruce and {Council of Industrial Design (Great Britain)}},
+	year = {1965},
+	note = {OCLC: 2108433},
+	keywords = {1}
+}
+
+@article{jarvinen_action_2007,
+	title = {Action {Research} is {Similar} to {Design} {Science}},
+	volume = {41},
+	issn = {1573-7845},
+	url = {https://doi.org/10.1007/s11135-005-5427-1},
+	doi = {10.1007/s11135-005-5427-1},
+	abstract = {In management information systems (MIS) action research is long considered as promising but low-level research approach. It has an utmost relevance because action researchers are working with practitioners to solve the important practical problem. Design science outlined some years ago is just winning a wider audience. Action research was traditionally classified into qualitative research methods. But it seems to be the “wrong” home of action research. We shall show that after comparison of the seven aspects: concrete results of the study, knowledge produced, activities, the intent and the nature of a study, the division of labor in a study and generation, use and test of knowledge, the concordance between the characteristics of action research on the one hand and of design science on the other hand is very good. Hence, action research and design science should next be considered as similar research approaches, and this is a turning point in the history of both action research and design science.},
+	language = {en},
 	number = {1},
-	journaltitle = {{AI} Magazine},
-	author = {Kumar, Vipin},
-	urldate = {2018-05-08},
-	date = {1992-03-15},
-	langid = {american},
-	file = {Full Text PDF:C\:\\Users\\robin\\Zotero\\storage\\JY5ESJWQ\\Kumar - 1992 - Algorithms for Constraint-Satisfaction Problems A.pdf:application/pdf;Snapshot:C\:\\Users\\robin\\Zotero\\storage\\IX6VVVXG\\976.html:text/html}
+	urldate = {2018-12-23},
+	journal = {Quality \& Quantity},
+	author = {Järvinen, Pertti},
+	month = feb,
+	year = {2007},
+	keywords = {action research, design science, qualitative method, research method},
+	pages = {37--54},
+	file = {Springer Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\YJEXZ5NX\\Järvinen - 2007 - Action Research is Similar to Design Science.pdf:application/pdf}
 }
 
-
-@article{hilbert-siekmann_zur_2001,
-	title = {Zur Stundenplansetzung an allgemeinbildenden Schulen},
-	abstract = {This thesis examines the problem of setting timetables at primary and secondary schools, which is defined as the problem of assigning teaching units (combinations of teachers, classes, subjects and room groups) to time slots and rooms. The analysis starts with an identification, based on an empirical survey, of constraints and objectives relevant to this problem also pointing out differences from related timetabling problems. The thesis continues with an analysis of solution approaches which have formerly been developed by practitioners as well as scientists in the timetabling field in order to identify their potential to adequately solve the special problem regarded here. Moreover, three new approaches based on Mixed Integer Programming are presented forming the main focus of the thesis. The first one, {ToMIP}, transforms the problem into a single mixed integer model. The second approach, {HiMIP}, divides the overall problem into one weekly and several daily problems. Each of these problems is depicted in a separate mixed integer model with the solution of the weekly model rendering the basic data for each daily model. The third approach, {SeMIP}, divides the set of all teaching units into a number of subsets using calculated priorities as well as school classes as separation criteria. Each of these subsets is represented by its own mixed integer sub-model. The sub-models are solved sequentially with each model containing the results of its predecessors as side constraints. Approaches {HiMIP} and {SeMIP} also contain randomized components in order to guarantee varying solution paths when the solution process is iterated. Having formulated the three new solution approaches test results based on real life data are presented. They show that {ToMIP} and {HiMIP} have no potential, whereas {SeMIP} has a significant potential of properly setting primary and secondary school timetables.},
-	pages = {10},
-	author = {Hilbert-Siekmann, Heinrich},
-	date = {2001},
-	langid = {german},
-	file = {Hilbert-Siekmann - Zur Stundenplansetzung an allgemeinbildenden Schul.pdf:C\:\\Users\\robin\\Zotero\\storage\\XBHB65H2\\Hilbert-Siekmann - Zur Stundenplansetzung an allgemeinbildenden Schul.pdf:application/pdf}
+@article{eekels_methodological_1991,
+	title = {A methodological comparison of the structures of scientific research and engineering design: their similarities and differences},
+	volume = {12},
+	issn = {0142-694X},
+	shorttitle = {A methodological comparison of the structures of scientific research and engineering design},
+	url = {http://www.sciencedirect.com/science/article/pii/0142694X9190031Q},
+	doi = {10.1016/0142-694X(91)90031-Q},
+	abstract = {The misunderstanding that engineering is just a part of science (at the most applied science) and that engineering design is only a kind of scientific research (often considered rather trivial) is still widespread, especially among scientists. Yet it is a misunderstanding. In the present paper the structures of scientific research and of engineering design will be compared and, apart from a few very evident similarities, a large number of essential differences will be discussed. The conclusions are on the one hand that science and engineering are strongly interwoven and mutually dependent on each other, but on the other hand that there are fundamental differences between scientific research and engineering design. They consequently require specific methodologies.},
+	number = {4},
+	urldate = {2018-12-21},
+	journal = {Design Studies},
+	author = {Eekels, J. and Roozenburg, N. F. M.},
+	month = oct,
+	year = {1991},
+	keywords = {1, engineering design, scientific research},
+	pages = {197--203},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\EYC87J3V\\0142694X9190031Q.html:text/html}
 }
 
-
-@article{valued_csf,
-	title = {Valued Constraint Satisfaction Problems: Hard and Easy Problems},
-	abstract = {In order to deal with over-constrained Constraint Satisfaction Problems, various extensions of the {CSP} framework have been considered by taking into account costs, uncertainties, preferences, priorities…Each extension uses a speciﬁc mathematical operator (+; max : : :) to aggregate constraint violations.},
-	pages = {7},
-	author = {Schiex, Thomas and Fargier, Helene and Verfaillie, Gerard},
-	langid = {english},
-	file = {Schiex et al. - Valued Constraint Satisfaction Problems Hard and .pdf:C\:\\Users\\robin\\Zotero\\storage\\EGITK6ZN\\Schiex et al. - Valued Constraint Satisfaction Problems Hard and .pdf:application/pdf}
+@article{brooke_sus_nodate,
+	title = {{SUS} - {A} quick and dirty usability scale},
+	abstract = {Usability does not exist in any absolute sense; it can only be defined with reference to particular contexts. This, in turn, means that there are no absolute measures of usability, since, if the usability of an artefact is defined by the context in which that artefact is used, measures of usability must of necessity be defined by that context too. Despite this, there is a need for broad general measures which can be used to compare usability across a range of contexts. In addition, there is a need for “quick and dirty” methods to allow low cost assessments of usability in industrial systems evaluation. This chapter describes the System Usability Scale (SUS) a reliable, low-cost usability scale that can be used for global assessments of systems usability.},
+	language = {en},
+	author = {Brooke, John},
+	keywords = {SUS},
+	pages = {8},
+	file = {Brooke - SUS - A quick and dirty usability scale.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\FLCA6RYU\\Brooke - SUS - A quick and dirty usability scale.pdf:application/pdf}
 }
 
-@online{_optaplanner_scoredirector,
-	title = {{ScoreDirector} ({OptaPlanner} distribution 7.7.0.Final {API})},
-	url = {http://docs.optaplanner.org/latest/optaplanner-javadoc/org/optaplanner/core/impl/score/director/ScoreDirector.html},
-	urldate = {2018-05-15},
-	file = {ScoreDirector (OptaPlanner distribution 7.7.0.Final API):C\:\\Users\\robin\\Zotero\\storage\\AQT89UQ7\\ScoreDirector.html:text/html}
+@article{davis_perceived_1989,
+	title = {Perceived {Usefulness}, {Perceived} {Ease} of {Use}, and {User} {Acceptance} of {Information} {Technology}},
+	volume = {13},
+	issn = {02767783},
+	url = {https://www.jstor.org/stable/249008?origin=crossref},
+	doi = {10.2307/249008},
+	abstract = {Validmeasurement scales for predicting user acceptance of computers are in short supply. Most subjective measures used in practice are unvalidated, and their relationship to system usage is unknown. The present research develops and validates new scales for two specific variables, perceived usefulness and perceived ease of use, which are hypothesized to be fundamental determinants of user acceptance. Definitionsfor these two variables were used to develop scale items thatwerepretested forcontent validityand then tested forreliability and construct validityin two studies involving a total of 152 users and four applicationprograms. Themeasures were refinedand streamlined, resultingin two six-itemscales withreliabilities of .98 for usefulness and .94 for ease of use. The scales exhibited high convergent, discriminanta,nd factoriavl alidityP. erceivedusefulnesswas significantlycorrelatedwithbothselfreported current usage (r=.63, Study 1) and self-predictedfutureusage (r=.85, Study2). Perceived ease of use was also significantlycorrelated withcurrentusage (r=.45, Study 1) and futureusage (r=.59, Study 2). In both studies, usefulness had a significantlygreater correlation withusage behaviorthan did ease of use. Regression analyses suggest that perceived ease of use may actually be a causal antecedent to perceived usefulness, as opposed to a parallel,direct determinantof system usage. Implicationsare drawn for futureresearch on user acceptance.},
+	language = {en},
+	number = {3},
+	urldate = {2018-12-10},
+	journal = {MIS Quarterly},
+	author = {Davis, Fred D.},
+	month = sep,
+	year = {1989},
+	keywords = {TAM},
+	pages = {319},
+	file = {Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\JG7VPFUY\\Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf:application/pdf}
 }
 
+@book{fishbein_belief_1975,
+	title = {Belief, {Attitude}, {Intention}, and {Behavior}: {An} {Introduction} to {Theory} and {Research}.},
+	isbn = {978-0-201-02089-2},
+	author = {Fishbein, Martin and Ajzen, Icek},
+	year = {1975}
+}
 
-@online{_optaplanner_description,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#whatIsOptaPlanner},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\6QL73I6U\\index.html:text/html}
+@article{ajzen_theory_1991,
+	title = {The {Theory} of {Planned} {Behavior}},
+	url = {https://ac-els-cdn-com.eaccess.ub.tum.de/074959789190020T/1-s2.0-074959789190020T-main.pdf?_tid=823d4a08-ed10-484e-a75d-0151aba58e59&acdnat=1544477985_6b90672be67ec1c823504143d5fe8a7d},
+	urldate = {2018-12-10},
+	author = {Ajzen, Icek},
+	year = {1991},
+	file = {1-s2.0-074959789190020T-main.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\Z5G6B2XY\\1-s2.0-074959789190020T-main.pdf:application/pdf}
 }
-@online{_optaplanner_planning_variable,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#planningVariable},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\3BI33RCN\\index.html:text/html}
+
+@article{wilhelm_nutzerakzeptanz_nodate,
+	title = {Nutzerakzeptanz von web-basierten „sozialen“ {Unternehmensanwendungen}},
+	language = {de},
+	author = {Wilhelm, Daniel B},
+	keywords = {SUS, TAM, TAM2},
+	pages = {16},
+	file = {Wilhelm - Nutzerakzeptanz von web-basierten „sozialen“ Unter.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\IPPS3VEE\\Wilhelm - Nutzerakzeptanz von web-basierten „sozialen“ Unter.pdf:application/pdf}
 }
-@online{_optaplanner_problem_fact,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#problemFact},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\XVQ2JBGJ\\index.html:text/html}
+
+@article{university_of_arkansas_dead_2007,
+	title = {Dead {Or} {Alive}? {The} {Development}, {Trajectory} {And} {Future} {Of} {Technology} {Adoption} {Research}.},
+	volume = {8},
+	issn = {15369323},
+	shorttitle = {Dead {Or} {Alive}?},
+	url = {https://aisel.aisnet.org/jais/vol8/iss4/10/},
+	doi = {10.17705/1jais.00120},
+	abstract = {Table 1 summarizes the major milestones and key citations in technology adoption research. Clearly, TAM has had a significant influence on the IS field. Beyond replication and generalizability, much of the progress to date has centered around competing models with techno-centric predictors. However, research challenging the basic tenets of intention theories has been somewhat limited. Research on the determinants and interventions is now starting to emerge, although much of the research on interventions is tied to training.},
+	language = {en},
+	number = {4},
+	urldate = {2018-12-11},
+	journal = {Journal of the Association for Information Systems},
+	author = {{University of Arkansas} and Venkatesh, Viswanath and Davis, Fred and {University of Arkansas} and Morris, Michael and {University of Virginia}},
+	month = apr,
+	year = {2007},
+	keywords = {TAM},
+	pages = {267--286},
+	file = {University of Arkansas et al. - 2007 - Dead Or Alive The Development, Trajectory And Fut.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\DM724WQX\\University of Arkansas et al. - 2007 - Dead Or Alive The Development, Trajectory And Fut.pdf:application/pdf}
 }
-@online{_optaplanner_planning_entity,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#planningEntity},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\S6HDQ5P6\\index.html:text/html}
+
+@article{venkatesh_model_1996,
+	title = {A {Model} of the {Antecedents} of {Perceived} {Ease} of {Use}: {Development} and {Test}},
+	url = {http://www.vvenkatesh.com/wp-content/uploads/2015/11/19963_DS_Venkatesh_Davis.pdf},
+	urldate = {2018-12-11},
+	author = {Venkatesh, Viswanath and Davis, Fred D.},
+	year = {1996},
+	file = {19963_DS_Venkatesh_Davis.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\8CTIUKHJ\\19963_DS_Venkatesh_Davis.pdf:application/pdf}
 }
-@online{_optaplanner_score,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#whatIsAScore},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\RWAUTE7S\\index.html:text/html}
+
+@article{venkatesh_theoretical_2000,
+	title = {A {Theoretical} {Extension} of the {Technology} {Acceptance} {Model}: {Four} {Longitudinal} {Field} {Studies}},
+	volume = {46},
+	url = {http://www.jstor.org/stable/2634758},
+	language = {en},
+	number = {2},
+	journal = {Management Science},
+	author = {Venkatesh, Viswanath and Davis, Fred D.},
+	year = {2000},
+	pages = {186--204},
+	file = {Venkatesh and Davis - 2000 - A Theoretical Extension of the Technology Acceptan.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\HM3K2L7J\\Venkatesh and Davis - 2000 - A Theoretical Extension of the Technology Acceptan.pdf:application/pdf}
 }
-@online{_optaplanner_solver,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#useTheSolver},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\7YC7F3J9\\index.html:text/html}
+
+@phdthesis{galli_technologieakzeptanz_2016,
+	title = {Technologieakzeptanz von {Tablet}-{PCs}: {Eine} erweitertes {Technologieakzeptanzmodell} unter {Einbeziehung} des {TAM}2 und der {UTAUT}},
+	url = {https://digitalcollection.zhaw.ch/bitstream/11475/1248/1/Galli_Dominick_W.BA.BO.GM.pdf},
+	urldate = {2018-11-30},
+	author = {Galli, Dominick},
+	year = {2016},
+	file = {Galli_Dominick_W.BA.BO.GM.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\CDQSJJ6Z\\Galli_Dominick_W.BA.BO.GM.pdf:application/pdf}
 }
-@online{_optaplanner_move,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#whatIsAMove},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\57422C5J\\index.html:text/html}
+
+@contents{https://doi.org/10.13140/rg.2.2.26978.79044,
+	doi = {10.13140/rg.2.2.26978.79044},
+	url = {http://rgdoi.net/10.13140/RG.2.2.26978.79044},
+	author = {Calisto,  Francisco Maria and Nascimento,  Jacinto C.},
+	language = {en},
+	title = {NASA-TLX Survey},
+	publisher = {ResearchGate},
+	year = {2018}
 }
-@online{_optaplanner_custom_move,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#customMoves},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\A6RNLBP7\\index.html:text/html}
+
+@phdthesis{giesa_bewertung_2003,
+	title = {Die {Bewertung} der {Verlässlichkeit} von {Mensch}-{Maschine}-{Systemen}},
+	school = {Berlin, Techn. Univ., Diss.},
+	author = {Giesa, Hans-Gerhard},
+	year = {2003},
+	keywords = {NASA-TLX},
+	file = {Die Bewertung der Verlässlichkeit von Mensch Maschine Systemen - Technische Informationsbibliothek (TIB):C\:\\Users\\Fabian\\Zotero\\storage\\5ZGZRU7F\\Die-Bewertung-der-Verlässlichkeit-von-Mensch-Maschine.html:text/html}
 }
-@online{_optaplanner_planning_solution,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#planningProblemAndPlanningSolution},
-	urldate = {2018-06-06},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\X8DBXKG9\\index.html:text/html}
+
+@phdthesis{gros_bestimmung_2004,
+	title = {Bestimmung von {Schwierigkeitsgraden} in einer zu entwickelnden {Versuchsumgebung}},
+	language = {de},
+	author = {Groß, Barabara-Ulrike},
+	year = {2004},
+	keywords = {NASA-TLX},
+	file = {Bestimmung von Schwierigkeitsgraden.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\ZCCCVIDJ\\Bestimmung von Schwierigkeitsgraden.pdf:application/pdf}
 }
-@online{_optaplanner_shadow_variable,
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#shadowVariable},
-	urldate = {2018-06-06}
+
+@techreport{pfendler_vergleichende_1991,
+	address = {Meckenheim},
+	title = {Vergleichende {Bewertung} der {NASA}-{TLX}-{Skala} und der {ZEIS}-{Skala} bei der {Erfassung} von {Lernprozessen}},
+	institution = {FGAN},
+	author = {Pfendler, C.},
+	year = {1991},
+	keywords = {NASA-TLX},
+	file = {Vergleichende Bewertung der NASA TLX Skala und der ZEIS Skala - Technische Informationsbibliothek (TIB):C\:\\Users\\Fabian\\Zotero\\storage\\WGVCCD52\\Vergleichende-Bewertung-der-NASA-TLX-Skala-und.html:text/html}
 }
-@online{optaplanner_solutiontypes
-	title = {{OptaPlanner} User Guide},
-	url = {https://docs.optaplanner.org/7.7.0.Final/optaplanner-docs/html_single/index.html#aPlanningProblemHasAHugeSearchSpace},
-	urldate = {2018-06-14},
-	file = {OptaPlanner User Guide:C\:\\Users\\robin\\Zotero\\storage\\NPW3JDLP\\index.html:text/html}
+
+@article{nygren_psychometric_1991,
+	title = {Psychometric {Properties} of {Subjective} {Workload} {Measurement} {Techniques}: {Implications} for {Their} {Use} in the {Assessment} of {Perceived} {Mental} {Workload}},
+	volume = {33},
+	issn = {0018-7208},
+	shorttitle = {Psychometric {Properties} of {Subjective} {Workload} {Measurement} {Techniques}},
+	url = {https://doi.org/10.1177/001872089103300102},
+	doi = {10.1177/001872089103300102},
+	abstract = {This paper examines fundamental measurement issues that have largely been ignored in scaling techniques for assessing perceived mental workload. It is argued that both theoretical and practical advances in workload assessment have been unnecessarily slowed by a lack of concern for measurement issues. Typical of this impedance are some recently reported “empirical results“ comparing various workload assessment techniques which actually follow directly from some misunderstood statistical properties of the scales. The commonly used subjective workload assessment procedures have distinct psychometric properties that make each procedure sensitive to different kinds of workload measurement. Examination of the properties for the National Aeronautics and Space Administration Task Load Index (NASA TLX) support its potential as a general prediction model for experienced workload and for the Subjective Workload Assessment Technique (SWAT) as a cognitive model sensitive to individual differences.},
+	language = {en},
+	number = {1},
+	urldate = {2018-12-19},
+	journal = {Human Factors},
+	author = {Nygren, Thomas E.},
+	month = feb,
+	year = {1991},
+	keywords = {NASA-TLX},
+	pages = {17--33}
+}
+
+@book{horold_faktor_2015,
+	title = {Der „{Faktor} {Mensch}“ im {Fokus} der {Entwicklung} von 3D-{Technologien} - {Methodensammlung} -},
+	url = {https://www.tu-chemnitz.de/mb/ArbeitsWiss/sites/default/files/forschung/projekte/ergebnisse/methodensammlung_faktor_mensch.pdf},
+	urldate = {2018-12-19},
+	author = {Hörold, Stephan and Ruschin, Detlef and Schubert, Daniel and Zimmermann, Ulrich},
+	year = {2015},
+	file = {methodensammlung_faktor_mensch.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\EYMD85QD\\methodensammlung_faktor_mensch.pdf:application/pdf}
 }
