--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -6,11 +6,96 @@ asdfasf
 
 \section{Ethnographie: Teilnehmende Beobachtung}
 
-asdfasdf
+Es sollen nun Ansatzpunkte gefunden werden, um die Theorie "Handwerker können durch den Einsatz von Technologie unterstützt werden und Zeit sparen" zu stärken. In der Ethnographie unterscheidet man dabei drei Varianten \cite{spittler_teilnehmende_2001}:
+
+\begin{itemize}
+	\item \textbf{Sammelzentriert:} Ethnographie unter der Prämisse, man muss und kann alle Informationen zu einem Gebiet sammeln.
+	\item \textbf{Theoriezentriert:} Beobachtetes und Fakten werden "im Lichte einer Theorie" ausgewählt und geordnet. Hierzu zählt unter anderem die teilnehmende Beobachtung.
+	\item \textbf{Problemzentriert:} Die Ethnographie stellt ein komplexes Problemfeld vor. Der Fokus liegt dabei nicht auf den Theorien des Forschers.
+\end{itemize}
+
+Diese Ethnographie fällt unter zweitere Kategorie, da die Aufzeichnungen genutzt werden, um oben genannte Theorie zu untersuchen. 
+
+Im klassischen Sinne werden Sachverhalte durch Fragebögen und systematische Interviews beleuchtet. Mit diesen Methoden können zwar in kurzer Zeit viele Informationen erhoben werden, jedoch werden sie häufig als extrem künstlich kritisiert. Diese statische Atmosphäre kann dazu führen, dass kein gutes Gespräch zustande kommt und der Handwerker nur genau auf die Fragen antwortet und Informationen zurückbehält. Der Fakt, dass berufliches Wissen oft als Geheimnis angesehen und nur spärlich und selektiv weitergegeben wird, spielt hier noch negativ mit ein \cite{spittler_teilnehmende_2001}. Deshalb sollten Fragebogen und Interview für diese Forschung noch komplementiert werden.
+
+Ein Blick fängt oft mehr ein als Worte. Deshalb wird zum Erheben der Informationen noch die Beobachtung der Arbeit eines Handwerkers hinzugefügt. Laut Spittler \cite{spittler_teilnehmende_2001} gibt es drei Prämissen, die eine Beobachtung, zusätzlich zu einem Interview befürworten:
+
+\begin{enumerate}
+	\item "Forschungspragmatisch besitzt die Beobachtung in manchen Situationen einen Vorteil gegenüber der Befragung."
+	\item "Die sprachliche Erfassung stößt wegen Geheimhaltung, Schweigen und Verschweigen auf Schwierigkeiten."
+	\item "Handlungen sind sprachlich gar nicht oder nur unter großen Schwierigkeiten erfassbar. (tacit knowledge)"
+\end{enumerate}
+
+Um die Arbeit eines Handwerkers besser zu verstehen, reicht es nicht sich diese nur von ihm Beschreiben zu lassen. Bei der Ausübung seines Handwerks kann er keine Schritte "verschweigen" und der Forscher kann diese direkt analysieren. Indem er sein Notizheft beiseite legt und selbst mitarbeitet, kann er sich ein genaues Bild des Handwerks machen und so auch kleine Ansatzpunkte zum bekräftigen seiner Theorie finden \cite{malinowski_argonauts_1922}. Deshalb wurde die Teilnehmende Beobachtung als Methode der Ethnographie gewählt.
+
+TODO: Beschreibung Methode
 
 \section{Gestaltungsorientierte Forschung: Implementieren eines Prototypen}
 
-asdfasdf
+Mit den Methoden Fokusgruppe und Ethnographie wird ein bestehendes Problem genauer beleuchtet und dabei herausgearbeitet, ob die Lösung dieses Problems wünschenswert ist. Auf Basis des erörterten Umstands soll dann eine Lösung gefunden werden, die dem Forscher und allen beteiligten Parteien genügt. Dabei stellt sich die Frage, wie man das Problem adressiert. Für problembasierte Forschung ist der Weg zu einer Lösung nicht geradlinig, weshalb ein flexibler Ansatz genutzt werden soll, wofür sich laut Hevner et al. \cite{hevner_design_nodate} die Methode \textit{Gestaltungsorientierte Forschung} anbietet. Dabei wird von einem Problem augegangen und über einen inkrementellen, iterativen Prozess eine Lösung erarbeitet. Hevner identifiziert dazu fünf charakteristische Faktoren von Problemen, die mit gestaltungsorientierter Forschung angegangen werden \cite{hevner_design_nodate}:
+
+\begin{enumerate}
+	\item ``Environmental factors such as requirements and constraints are poorly defined"
+	\item ``An inherent complexity in the problem and possible solutions"
+	\item ``A flexibility and potential for change of possible solutions"
+	\item ``A solution at least partially dependent on human creativity"
+	\item ``A solution at least partially dependent on collaborative effort"
+\end{enumerate}
+
+Das Erfüllen dieser Kriterien qualifiziert ein Problem für gestaltungsorientierte Forschung. Basierend auf den Arbeiten von Hevner und anderen renommierten Wissenschaftlern entwickelte Pfeffers ein \textit{6-Phasen Modell} zur Durchführung einer solchen Forschung \cite{j._ellis_guide_2010}. Dabei werden die Phasen \textit{Problemidentifikation und Motivation} zur Begründung der Forschung, \textit{Ziel der Lösung}, \textit{Gestaltung und Entwicklung}, sowie \textit{Demonstration des Artefakts}, \textit{Evaluation} der Tests und \textit{Kommunikation der Ergebnisse} durchlaufen \cite{peffers_design_2007}. 
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/DS_Peffers.png}
+		\caption{Peffers et al.: Gestaltungsorientierte Forschung \cite{peffers_design_2007}}
+	\end{center}
+\end{figure}
+
+Diese sechs Phasen können sequentiell von der ersten bis zur letzten durchgearbeitet werden, aber nicht zwangsläufig. Ein Forscher kann auch an einer für ihn passend erscheinenden Phase beginnen und von dort aus weiterarbeiten. Problemzentrierte Forschung beginnt in Phase 1, \textit{Problemidentifikation und Motivation}. Dieser Ansatz wird häufig gewählt, wenn auf früherer Forschung aufgebaut oder von der Beobachtung eines Problems begonnen wird. Zielorientierte Forschung hingegen startet meistens in Phase 2, \textit{Ziel der Lösung}. Dies wird oft durch einen Anstoß aus der Industrie angetrieben. Gestaltungsorientierte Ansätze beginnen mit Phase 3, \textit{Gestaltung und Entwicklung}. Dabei gehen die Forscher meist von einem unfertigen, nicht komplett durchdachten Artefakt aus früherer Forschung oder Projekten aus. Eventuell stammt das Artefakt sogar aus einer anderen Forschungsdomäne und wurde zur Lösung eines anderen Problems erstellt. Mit Phase 4, \textit{Demonstration des Artefakts} beginnt die kunden- oder kontextbasierte Forschung. Dabei entstand die Idee beim Beobachten einer praktischen Lösung, welche funktioniert. Die Forscher arbeiten dabei rückwärts und versuchen so die bestehende Lösung zu verbessern. Dieser Ansatz kann aus einer Consultingerfahrung hervorgehen.
+
+In dieser Arbeit wird mit Phase 1 begonnen, da das Problem anfangs durch die Ethnographie identifiziert wurde. Im Folgenden wird die Methode von Peffers genauer beschrieben \cite{peffers_design_2007}.
+
+\subsection{Problemidentifikation und Motivation}
+
+Peffers diskutiert Ansätze verschiedener Wissenschaftler zu Problemidentifikation und wie man Ideen findet, welche umsetzenswert sind. Der Ansatz, welcher von Pfeffers aufgegriffen wird, von Archer \cite{archer_systematic_1965} und Eekels \cite{eekels_methodological_1991} bezieht sich auf angewandte Probleme, also welche die bei einer Tätigkeit auffallen, auftreten und behindern. \\
+In diesem Abschnitt muss die Suche nach einer Lösung für ein Problem begründet werden. Der zu betrachtende Umstand wird dafür genau dargelegt und definiert. Das Problem wird in kleine Teile gespalten und genau beleuchtet. Durch eingehende Betrachtung kleiner Teilbereiche kann die Komplexität des Problems in der Lösung abgebildet werden. Nur aus einer ausreichenden Problembeschreibung lässt sich ein fundiertes Artefakt erzeugen. 
+
+Aus der Motivation ergeben sich zwei Vorteile für den Forscher: \\
+Das Problem zu identifizieren und so die Suche nach einer Lösung zu begründen motiviert den Forscher, sowie die Leser seiner Arbeit bei der Suche und der Akzeptanz der Ergebnisse. \\
+Zusätzlich hilft es Lesern seine Schlussfolgerungen nachzuvollziehen. \\
+Um diesen Schritt durchzuführen stehen das Wissen über den aktuellen Stand des Problems, sowie die Wichtigkeit der Lösung als Ressourcen zur Verfügung. Daraus lassen sich die Anforderungen an eine Lösung zusammenstellen \cite{peffers_design_2007}.
+
+\subsection{Ziel der Lösung}
+
+Auch wenn das Problem gut spezifiziert ist, lässt es sich oft nicht direkt in Ziele übersetzen. Diese lassen sich besser über einen inkrementellen Prozess bestimmen, als direkt festlegen. Damit sollen die performance Ziele der Lösung herausgearbeitet werden. 
+
+Grundlegend leitet man die Ziele von der Problemdefinition, sowie dem Wissen was möglich und machbar ist ab. Dabei kann das Ziel quantitativ sein, also beispielsweise Umstände darlegen, für welche die angestrebte Lösung besser ist als eine existierende. Oder es handelt sich um ein qualitatives Ziel, bei dem ein Artefakt Lösungen oder Hilfe für Probleme bereitstellt, welche über das ursprüngliche Problem hinausgehen. Besonders wichtig ist dabei, dass alle Ziele logisch aus der Problemspezifikation herleitbar sind. Als Ressource zur Herleitung der Ziele sollte der aktuelle Stand des Problems, als auch bereits verfügbarer Lösungen (falls existent), vorhanden sein und deren Zweckmäßigkeit überprüft werden.
+
+\subsection{Gestaltung und Entwicklung}
+
+Aus den gefundenen Problemen und Zielen wird nun ein Artefakt entwickelt. Für Peffers Gestaltungsorientierte Forschung kann man dabei nach dem Prinzip "early prototyping" vorgehen, da es sich um einen inkrementellen Prozess handelt. Alle Wissenschaftler, welche Peffers untersuchte legten den Fokus auf diese Phase.
+
+Es wird dabei ein Artefakt erzeugt. Artefakte sind für Peffers Konstrukte, Modelle, Methoden, Instantiierungen oder "new properties of technical, social, and/or informational resources" \cite{jarvinen_action_2007}. Generell ist dabei jedes Forschungsartefakt ein Objekt, welches durch Zuhilfenahme von wissenschaftlichen Beiträgen entstanden ist. Dies beinhaltet die Funktion und die Architektur des Artefakts festzulegen und daraus dann das Artefakt zu kreieren. Dabei soll der Wissenschaftler theoretisches Wissen als Ressource nutzen, welches in der Lösung zum tragen kommen soll.
+
+\subsection{Demonstration des Artefakts}
+
+Um die Funktionstauglichkeit des Artefakts zu testen wird es vorgezeigt. Dabei kann entweder ein Test stattfinden, um zu zeigen, dass die Idee funktioniert, oder mehrere Tests, um eine genauere Evaluation durchzuführen.
+
+Das Artefakt wird dabei so vorgeführt, damit deutlich wird, dass es eins oder mehr der anfangs definierten Probleme lösen kann. Dazu zählt die Verwendung des Artefakts in Experimenten, Simulationen, Case Studies, Beweisen oder anderen geeigneten Aktivitäten. Als Ressource zum Durchführen der Demonstrationsphase gilt das Wissen, wie man das Artefakt einsetzen muss, um ein Problem zu lösen.
+
+\subsection{Evaluation}
+
+Das Artefakt wurde untersucht und nun müssen die Informationen verwertet werden. Dazu ist wichtig, dass vor der Demonstration Werte festgelegt werden, welche dabei erfasst werden. Der Wissenschaftler muss genau beobachten und messen, wie gut das Artefakt die Lösung des Problems unterstützt. Dazu vergleicht er die Ziele der Lösung mit den tatsächlich beobachteten Ergebnissen der Demonstration des Artefakts. Um dies erfolgversprechend durchzuführen, wird ein Wissen über relevante Metriken und Analysetechniken verlangt.
+
+Der Charakter der Forschung entscheidet dabei, welche Form der Evaluation durchgeführt wird. Dabei werden Methoden verwendet, wie beispielsweise das Vergleichen der Artefaktfunktionalität mit den Zielen der Lösung aus Phase 2, quantitative Leistungsmesswerte, wie hergestellte Güter oder erwirtschaftetes Kapital, Ergebnisse von Zufriedenheitsumfragen, Kundenfeedback, Simulationen, oder quantifizierbare Messwerte der Systemperformanz, wie Reaktionszeit oder Verfügbarkeit des Systems. Die Evaluation kann alle möglichen geeigneten empirischen Daten oder logische Beweise enthalten.
+
+Am Ende dieser Phase kann der Forscher entscheiden ob er wieder zu Phase 3 zurückgeht und die gewonnenen Erkenntnisse nutzt um ein neues, besseres Artefakt zu entwickeln, oder ob er in die letzte Phase der Methode fortschreitet und die weitere Entwicklung zukünftigen Projekten überlässt. Dabei gibt die Art der Forschung an, welche Methode sinnvoller ist.
+
+\subsection{Kommunikation der Ergebnisse}
+
+Die gewonnenen Erkenntnisse müssen nun entsprechend Kommuniziert werden, um sie zu verbreiten. Dies sollte das Problem und seine Wichtigkeit, das Artefakt und seine Nützlichkeit und Neuartigkeit, die Einzelheiten des Designs und seine Effektivität enthalten. Die Publikation sollte an andere Wissenschaftler oder relevante Gruppen, wie zum Beispiel praktizierende Personen aus dem entsprechenden Bereich gerichtet sein. 
+
+In wissenschaftlichen Publikationen kann die Struktur dieser Methode genutzt werden, um die Ausarbeitung zu strukturieren, wie beispielsweise empirische Forschung durch den empirischen Prozess (Problemdefinition, Literaturrecherche, Aufstellen der Hypothesen, Datensammlung, Analyse, Ergebnis und Fazit) strukturiert wird. Die Kommunikation der Ergebnisse erfordert Wissen darüber, wie Arbeiten in der entsprechenden Disziplin verfasst werden. 
 
 \section{Designen des Fragebogens}
 
@@ -18,6 +103,79 @@ Diese Arbeit zielt darauf ab, einen theoretischen, sowie einen praktischen Beitr
 
 \begin{itemize}
 	\item Wie ist der Bezug des Handwerkers zu technischen Geräten?
+	\item Wie komplex ist der Umgang mit dem System?
 	\item Kann der Handwerker sich vorstellen die Technologie in Zukunft zu nutzen?
 \end{itemize}
+
+Ersteres soll Helfen abzuschätzen, wie sehr die technische Versiertheit des Handwerkers sich auf die Akzeptanz bzw. das Interesse an der Applikation auswirkt. \\
+Die Nutzung eines neuen Systems, in diesem Fall einer AR Anwendung, stellt für die Handwerker aus unternehmerischer Sicht eine Risiko dar. Deshalb ist es essentiell bestimmen zu können, ob die Anwendung von den Nutzern akzeptiert und genutzt werden wird. Die beiden weiteren Fragen sollen Aufschluss darüber geben, wie die Einstellung der Fachkräfte zu dieser neuen Technologie ist. Um diese Fragen zu beantworten, werden psychologisch und wirtschaftlich evaluierte Modelle verwendet. 
+
+Um die Gebrauchstauglichkeit der Applikation zu testen, wird das \textbf{SUS} (System Usability Scale) \cite{brooke_sus_nodate} Modell verwendet. Es gibt Aufschluss darüber, wie einfach oder umständlich die Bedienung für den Handwerker war. \\
+Ein System wird nicht genutzt, wenn der Nutzer die Interaktion damit als zu Anstrengend empfindet. Um herauszufinden, als wie fordernd der Handwerker die Nutzung der Applikation empfindet, wird das Modell \textbf{NASA-TLX} verwendet. \\
+Zusätzlich werden noch \textbf{TAM} und \textbf{TAM2} angewandt. Diese Abkürzungen stehen für Technology Acceptance Model. Sie wurden entwickelt, um vorherzusagen, wie wahrscheinlich ein Anwender eine Technologie nutzen wird. \\
+Im folgenden werden die Modelle erklärt.
+
+\subsection{SUS}
+
+Bei der \textbf{System Usability Scale} handelt es sich um einen einfachen, aus zehn Punkten bestehenden Fragebogen zur subjektiven Einschätzung der Gebrauchstauglichkeit eines Systems. Es ist eine \textbf{Likert Skala}, auf welcher die Zustimmung oder Ablehnung durch sieben Punkte angegeben werden kann. Sie hilft Aufschluss darauf zu geben, ob ein System benutzt werden wird, oder nicht. \\
+Nach ISO 9241-11 sollte die Messung der Gebrauchstauglichkeit folgende Aspekte abdecken \cite{brooke_sus_nodate}:
+
+\begin{itemize}
+	\item \textit{Effektivität:} Die Fähigkeit des Nutzers gestellte Aufgaben mit Hilfe des Systems zu erledigen und die Qualität der Resultate.
+	\item \textit{Effizienz:} Die Menge der konsumierten Ressourcen, nötig zur Erledigung der Aufgabe.
+	\item \textit{Befriedigung:} Die subjektiven Reaktionen des Nutzers auf die Verwendung des Systems.
+\end{itemize}
+
+Diese Größen zieht auch der industrielle Nutzer in Betracht, wenn er über die Implementierung einer neuen Technologie in seinem Arbeitsalltag nachdenkt. Aus unternehmerischer Sicht ist es jedoch oft nicht rentabel, eine komplette Kontextanalyse durchzuführen. SUS, mit seinen zehn Fragen, liefert eine genügende Einschätzung der Abdeckung dieser Größen.
+
+Zur Erstellung des Fragebogens wurde ein Katalog von 50 Fragen durch John Brooke und sein Team analysiert. Dabei haben sie die zehn Fragen herausgearbeitet, welche die stärksten zustimmenden bzw. ablehnenden Reaktionen bei Probanden hervorgerufen haben. Durch die erhaltenen subjektiven Antworten auf diese Fragen lässt sich abschätzen, wie viel Training und Unterstützung neue Nutzer des Systems brauchen werden, um dieses erfolgreich zu benutzen, und wie komplex es den Anwendern erscheint.
+
+Laut John Brooke \cite{brooke_sus_nodate} sollen die Probanden den Fragebogen ausfüllen, nachdem sie das System getestet haben und bevor eine anschließende Diskussion beginnt. Dabei sollen diese ankreuzen, was ihnen ihr Gefühl nach dem Lesen der Frage sagt und nicht lang über diese nachdenken. Alle Fragen müssen dabei beantwortet werden. Sollte ein Proband auf eine Frage keine Antwort geben wollen oder können, wird das neutrale Ergebnis der Frage angekreuzt. \\
+Einzelne Antworten auf Fragen sind alleine nicht aussagekräftig. Die gesamte Auswertung aller Antworten gibt jedoch einen Wert zwischen 0 und 100, welcher die generelle Gebrauchstauglichkeit der Applikation angibt.
+
+\subsection{NASA-TLX}
+
+Der von NASA entwickelte \textbf{Task Load Index} (NASA-TLX) ist ein weit verbreitetes Instrument zur Bestimmung der Beanspruchung eines Probanden bei einem Testszenario oder dem Testen einer Anwendung \cite{giesa_bewertung_2003}. Er wurde ausgewählt, um zu bestimmen, als wie Anstrengend Handwerker die Nutzung von Augmented Reality empfinden und ob das eine Auswirkung auf die Akzeptanz der Technologie, sowie der Anwendung hat. Dabei misst der Index die Beanspruchung in sechs Dimensionen:
+
+\begin{itemize}
+	\item Geistige Anforderungen
+	\item Körperliche Anforderungen
+	\item Zeitliche Anforderungen
+	\item Leistung
+	\item Anstrengung
+	\item Frustrationsniveau
+\end{itemize}
+
+Diese lassen sich wiederum in drei Subskalen unterteilen \cite{gros_bestimmung_2004}:
+
+\begin{itemize}
+	\item Merkmale der Aufgabe: geistige, körperliche, zeitliche Anforderungen
+	\item Verhaltensmerkmale: Leistung und Anstrengung
+	\item Individuelle Merkmale: Frustration
+\end{itemize}
+
+Jede dieser Dimensionen wird auf einer Skala mit 20 Stufen angegeben, die jeweils von \textit{gering} bis \textit{hoch} reicht. Jede Stufe auf der Skala wird mit 5 Punkten gewichtet. Dadurch reicht jede von 0 bis 100 und gibt somit die erfahrene Belastung zu jeder Dimension in Prozent an. Zur Auswertung wird der ungewichtete NASA-TLX verwendet. Dabei werden alle Punkte zusammengezählt und durch die Anzahl der Dimensionen geteilt. Dabei erhält man wieder einen Wert zwischen 0 und 100.
+
+Die originale Version des NASA-TLX sieht eine Gewichtung der einzelnen Dimensionen vor. Dieses Vorgehen wurde jedoch häufig kritisiert. Nygren \cite{nygren_psychometric_1991} schlägt vor ganz auf die Gewichtung zu verzichten. Pfendler \cite{pfendler_vergleichende_1991} gibt bei der deutschen Version des NASA-TLX an, dass durch Weglassen der Gewichtung des Gesamtwerts eine höhere Reliabilität erzielt werden kann. Deshalb wird auch hier auf die Gewichtung verzichtet.
+
+Auch wenn der NASA-TLX hoch etabliert, diagnostisch und valide ist, wird doch erwähnt, dass die deutsche Version scheinbar weniger sensitiv ist als die englische \cite{horold_faktor_2015}. In dieser Arbeit wird die deutsche Version verwendet, da die App mit deutschsprachigen Probanden getestet wird. Es wird darauf vertraut, dass die Sensitivität ausreichend ist. 
+
+Der Fragebogen wurde mit \LaTeX  aus dieser Vorlage erstellt \cite{https://doi.org/10.13140/rg.2.2.26978.79044}.
+
+\subsection{TAM und TAM2}
+
+Eines der am weitesten verbreiteten Modelle in der Akzeptanzforschung ist das \textbf{Technology Acceptance Model} (TAM) von Davis \cite{davis_perceived_1989}. Es ist aus der \textbf{Theory of Reasoned Action} (TRA) von Fishbein und Ajzen \cite{fishbein_belief_1975} und der darauf basierenden \textbf{Theory of Planned Behaviour} (TPB) von Ajzen \cite{ajzen_theory_1991} entstanden. Beide Modelle stammen aus der Psychologie und analysieren wie die Einstellung einer Person zu einer Handlung, sowie subjektive Normen das Verhalten dieser Person beeinflussen. TPB zieht zusätzlich den subjektiven Aufwand, zum bewältigen einer Handlung in Erwägung und erweitert so TRA. 
+
+Davis schlug das TAM 1989 in seiner Dissertationsschrift vor. Es bietet, vor allem im industriellen Bereich, auf Basis der Nutzungsintention eine Möglichkeit die Akzeptanz einer nicht marktreifen Technologie zu prognostizieren \cite{wilhelm_nutzerakzeptanz_nodate}. Dabei kombiniert das TAM die Größen \textit{wahrgenommener Nutzen} und \textit{wahrgenommene Einfachheit der Nutzung}, um diese Aussagen zu treffen. Ersteres gibt an, ob der Nutzer sich eine Steigerung seiner Produktivität aus der Verwendung der Technologie verspricht. Zweiteres beschreibt für wie komplex der Nutzer die Anwendung der Technologie hält. Laut Davis bewegen diese beiden Faktoren Unternehmer dazu die Technologie zu verwenden und Mitarbeiter im Umgang damit zu schulen. Das TAM bietet zusätzlich eine hohe Flexibilität, wurde in zahlreichen Studien getestet und seine Aussagekraft bestätigt \cite{university_of_arkansas_dead_2007}.
+
+Davis erweiterte sein Modell auf die Version TAM2, um mehr auf die wahrgenommene Nützlichkeit einzugehen. Seiner Meinung nach gibt diese Determinante großen Aufschluss über die Intention eines Nutzers, wurde aber bis zu dem Zeitpunkt nicht eindringlich betrachtet \cite{venkatesh_model_1996}. Dazu ergänzte er Einflussfaktoren auf das Konstrukt wahrgenommene Nützlichkeit um \textbf{soziale} und \textbf{-	Kognitiv-instrumentelle Prozessvariablen}, sowie Betrachtungen zu unterschiedlichen Messzeiten. Soziale Variablen beschreiben dabei den Einfluss der Umgebung einer Person auf ihr Verhalten. Also wie sieht das Umfeld der Person die getestete Technologie und welchen Einfluss hat das auf die Entscheidung der Testperson. Zweitere Variable gibt wiederum an wie relevant das Ergebnis durch die Nutzung der Technologie für die Arbeit des Nutzers ist und wie gut es sich präsentieren lässt \cite{venkatesh_theoretical_2000}. Studien belegen, dass soziale Prozessvariablen anfangs die wahrgenomme Nützlichkeit für Nutzer stark beeinflussen, dies jedoch abnimmt, sobald der Proband mehr Erfahrung gesammelt hat \cite{galli_technologieakzeptanz_2016}.
+
+\begin{figure}[h]
+\begin{center}
+\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/TAM.png}
+\caption{Technology Acceptance Modell}
+\end{center}
+\end{figure}
+
+
 
